# ilab_gipfeli

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
docs/: README.md  map_viewer.md  spot-controller.md  telegram-bot.md
maps/map_catacombs_01/: graph
maps/map_catacombs_01/edge_snapshots/: edge_snapshot_id_aboral-shrew-Zo.j5oEzAAjeAS5ePQaM1w==  edge_snapshot_id_ace-shrew-Tem.4vLeodcBb.cdKN+FDQ==  edge_snapshot_id_agape-weevil-wW+YrdkFFvdjxg5TD39FnA==  edge_snapshot_id_alated-tomcat-MOnBIgwsQPccR6lJD7gwhw==  edge_snapshot_id_alike-taipan-zxoVE.UfbXNhhiUe37yDPw==  edge_snapshot_id_ane-narwal-fwqNw.KD+Bqk5WJlYY9Emg==  edge_snapshot_id_aslope-ocelot-hyaPo8MP..0wX1OB4f1UiQ==  edge_snapshot_id_azoic-syphon-l8mEzcCKh3gCbWopSIMuMw==  edge_snapshot_id_banner-fleece-MdMux88yX7lQNtSTLh.jJg==  edge_snapshot_id_belted-volvox-uUSVWmnlacDc0USMOL0Pzg==  edge_snapshot_id_biform-impala-qb8O.kPoaVsMlov23m0q3A==  edge_snapshot_id_boggy-baboon-Nf3xVTpUAdWiXKU8b5ef2w==  edge_snapshot_id_boring-fawn-tzxfXcOS9cLiVkPOGAi7Fg==  edge_snapshot_id_braggy-flea-jE5y98m+TDfm39YQ2Bxzlw==  edge_snapshot_id_brainy-cod-+DsZ7+HC.jTx8SWRQHLwng==  (+91 more)
src/: __init__.py  logging_config.py
src/map_viewer/: __init__.py  __main__.py  cli.py  loader.py  transformer.py  viewer.py
src/spot/: __init__.py  spot_controller.py
src/telegram/: bot.py  echobot.py
tests/: __init__.py  conftest.py
tests/test_map_viewer/: __init__.py  test_transformer.py
tests/test_spot/: __init__.py  test_pure_functions.py  test_spot_controller.py
tests/test_telegram/: __init__.py  test_handlers.py
(+107 files in other folders)
