[project]
name = "ilab-gipfeli"
version = "0.1.0"
description = "A project by iLab Kanti Glarus."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-telegram-bot>=22.5",
    "bosdyn-client>=4.0.0",
    "bosdyn-mission>=4.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]
viewer = [
    "plotly>=5.18.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = [
    "-v",
    "--cov=src",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/__init__.py"]
